tests/neg-custom-args/captures/cc-this.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this.scala:10:15 --------------------------------------
10 |    val y: C = this // error
   |               ^^^^
   |               Found:    (C.this : C^{C.this.x})
   |               Required: C
   |
   |               Note that capability `C.this.x` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/cc-this.scala:12:15 ------------------------------------
12 |  class C2(val x: () => Int): // error
   |               ^
   |               Reference `C2.this.x` is not included in the allowed capture set {} of the self type of class C2.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/cc-this.scala:19:8 -------------------------------------
19 |  class C4(val f: () => Int) extends C3 // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |Reference `C4.this.f` of the self type of class C4 is not included in the allowed capture set {} of pure base class class C3.
